# gapsense-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  ALL_PATHS_MAP.md  ARCHITECTURE_AUDIT_PHASE1_COMPLETE.md  AWS_DEPLOYMENT_CHECKLIST.md  AWS_DEPLOYMENT_COMPLETE.md  BUGFIX_REQUIREMENTS.md  BUILD_STATUS.md  CHANGELOG.md  CODE_QUALITY_VERIFICATION.md  CODING_STANDARDS.md  COMPREHENSIVE_ANALYSIS.md  DAY_1_COMPLETION_CHECKLIST.md  DEMO_READY.md  DEMO_UI_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  Dockerfile  EXERCISE_BOOK_ANALYSIS_REPORT.txt  FLOW_DIAGRAM.txt  IMPLEMENTATION_PLAN.md  MOVE_PROPRIETARY_FILES.md  PHASE4_CHANGES.md  PITCH_DECK_SLIDES_TO_REMOVE.md  PITCH_DECK_SLIDE_TITLE_FIX.md  PITCH_DECK_TEAM_SLIDES_UPDATE.md  PRODUCTION_CURRICULUM_ISSUE.md  README.md  SESSION_SUMMARY.md  TASKS.md  TDD_PROGRESS.md  TECH_LEAD_ANALYSIS.md  TECH_STACK_VERIFICATION.md  (+29 more)
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  curriculum_evidence.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
alembic/: README.md  env.py
alembic/versions/: 20260214_1315_f00f469d61b1_initial_schema.py  20260214_2242_2adcce6e7173_fix_curriculum_strands_created_at_type_.py  20260215_2202_353744cdbdc4_add_conversation_state_fields_to_parent_.py  20260215_2226_c1de30aa4d19_make_last_message_at_and_session_.py  20260215_2227_ae0be4bd4a74_make_opted_in_at_and_opted_out_at_.py  20260215_2335_88b3d73647b3_add_diagnostic_consent_fields_and_fix_.py  20260216_1204_eb4eab32e503_add_teacher_conversation_state_and_.py  20260216_1214_9308455ddbbd_make_primary_parent_id_nullable_for_.py  20260216_1257_80fda3c19375_seed_default_region_and_district_for_mvp.py  20260216_1303_b5881bce9d82_add_full_name_field_to_student_model_.py  20260216_1854_e8fa7fe1de92_add_ges_schools_and_school_invitation_.py  20260216_2033_5857d9dac882_add_pending_status_to_diagnostic_.py  20260216_2039_7a3674609a3b_make_diagnostic_datetime_columns_.py  20260216_2102_9053af4ce460_make_teacher_school_id_nullable_for_.py  20260314_1430_a1b2c3d4e5f6_multi_country_schema.py  20260315_1234_f6149442cce0_add_metadata_to_gap_profiles.py  20260315_1830_make_strand_fields_nullable.py  20260315_2201_b6e696c45284_make_strand_columns_nullable.py  20260316_1000_c7d8e9f0a1b2_add_processing_ledger.py  20260316_1100_d8e9f0a1b2c3_add_pgvector_embedding_columns.py  20260318_1457_5eef3213784c_phase_4_add_student_grade_canonical_.py  20260722_2216_24447d9c104b_reconcile_model_schema_defaults.py
data/prompts/: gapsense_prompt_library_v2.0_multicountry.json
docs/: ANALYTICS_AND_SEARCH_MODEL.md  ASSESSMENT_GENERATION_PRODUCT_BRIEF.md  BRAND_AND_INTERFACE_GUIDELINES.md  COST_OPTIMIZATION_STRATEGY.md  CURRICULUM_COVERAGE_AUDIT.md  DATA_PLATFORM_ARCHITECTURE.md  DELIVERY_AND_RELEASE_MODEL.md  FOUNDATION_EDGE_CASES_AUDIT.md  FOUNDATION_USER_FLOWS.md  FRONTEND_RECONCILIATION_AUDIT.md  LOCAL_WEB_PROTOTYPE_GUIDE.md  MARKET_AND_USER_RESEARCH.md  MVP_REBUILD_PROGRESS.md  PHASE_2_3_SUMMARY.md  PROJECT_CHARTER.md  README.md  REAL_WORLD_GAP_ANALYSIS.md  REMOTE_MAIN_RECONCILIATION.md  SECURITY_AND_PRIVACY_MODEL.md  SECURITY_HOOKS.md  SELF_AUDIT_PHASE_1_2.md  TDD_IMPLEMENTATION_PLAN.md  VIZTRACER_GUIDE.md  WAYS_OF_WORKING.md  gapsense_alignment_analysis.md  gapsense_claude_code_prompt.md  gapsense_claude_code_prompt_v2.md  gapsense_project_structure.md  gapsense_roadmap_bridge.md  gapsense_technical_roadmap_bridge.md  mvp_specification_audit_CRITICAL.md  mvp_user_flows_realistic_status.md
docs/architecture/: ARCHITECTURE.md  gapsense_adr.md
docs/decisions/: ADR-001-web-frontend-stack.md  ADR-002-analytics-and-search-publication.md
docs/improvements/: MASTER_README.md  phase1_claude_code_prompt.md  phase1_spec.md  phase2_claude_code_prompt.md  phase2_spec.md  phase3_claude_code_prompt.md  phase3_spec.md  phase4_claude_code_prompt.md  phase4_spec.md
docs/specs/: gapsense_api_spec.json  gapsense_data_model.sql  gapsense_test_scenarios.json  gapsense_whatsapp_flows.json
fixtures/public-data/: README.md
frontend/: .dockerignore  Dockerfile  JS_EXTRACTION_SUMMARY.md  MOBILE_AUDIT.md  OFFLINE_PWA_SUMMARY.md  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/css/: demo.css
frontend/e2e/: entry-experience.spec.ts
frontend/js/: api.js  constants.js  main.js
frontend/src/: App.test.tsx  App.tsx  main.test.tsx  main.tsx  styles.css
infrastructure/: gapsense_localstack-init.sh
infrastructure/cdk/: gapsense_cdk_stack.py
public/: demo.html  demo.html.backup  demo.html.backup2  demo_temp.html  developer.html  index.html  manifest.json  student_detailed_report.html  sw.js  teacher_reports.html
public/frontend/: BUILD_SETUP.md  CSS_EXTRACTION_SUMMARY.md  MOBILE_OPTIMIZATION_PROGRESS.md
scripts/: ci.sh  fix_forward_refs.py  generate-vercel-config.sh  import_ges_data_to_db.py  import_ges_schools.py  install_hooks.sh  load_curriculum.py  load_indicators.py  migrate.sh  run_dev.sh  scan_secrets.sh  setup.sh  test_hooks.sh  test_migrations.sh  trace.sh  validate.sh  verify.sh
src/gapsense/: __init__.py  config.py  main.py
tests/: conftest.py  quick_coverage_boost.py
tests/api/: test_curriculum.py  test_diagnostics.py  test_diagnostics_comprehensive.py  test_parents.py  test_parents_comprehensive.py  test_school_registration.py  test_teachers.py  test_teachers_comprehensive.py  test_whatsapp_webhook.py
tests/e2e/: test_demo_flow_e2e.py
tests/integration/: test_adaptive_diagnostic.py  test_ai_diagnostic_flow.py  test_complete_mvp_flow.py  test_database.py  test_demo_ui.py  test_whatsapp_flow_integration.py
tests/unit/: test_ai_client.py  test_ai_client_pbt.py  test_ai_client_pbt_cascade.py  test_ai_question_generation.py  test_config.py  test_confirmation_steps.py  test_cost_logging_pbt.py  test_curriculum_loader.py  test_database.py  (+47 more)
(+201 files in other folders)
