[tool.poetry]
name = "gapsense"
version = "0.1.0"
description = "AI-Powered Foundational Learning Diagnostic Platform for Ghana"
authors = ["Maku Mazakpe <maku@gapsense.app>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "gapsense", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = "^2.10"
pydantic-settings = "^2.7"
anthropic = "^0.43"
httpx = "^0.28"
aiobotocore = "^2.15"
python-jose = {extras = ["cryptography"], version = "^3.3"}
structlog = "^24.4"
python-multipart = "^0.0.12"  # Security: fixes CVEs in 0.0.9
aiofiles = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
pytest-cov = "^6.0"
factory-boy = "^3.3"
mypy = "^1.14"
ruff = "^0.9"
pre-commit = "^4.0"
bandit = "^1.7"
safety = "^3.0"
detect-secrets = "^1.4"
vulture = "^2.11"
deptry = "^0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# RUFF - Fast Python Linter/Formatter
# ============================================================================

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"src/gapsense/core/models/*" = ["TC003"]  # datetime/UUID used at runtime in SQLAlchemy
"src/gapsense/ai/prompt_loader.py" = ["TC003"]  # Path used at runtime

[tool.ruff.lint.isort]
known-first-party = ["gapsense"]

# ============================================================================
# MYPY - Type Checking
# ============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# PYTEST
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/gapsense",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "prompt_validation: marks tests that call live AI APIs",
]

# ============================================================================
# COVERAGE
# ============================================================================

[tool.coverage.run]
source = ["src/gapsense"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================================
# BANDIT - Security Linter
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]  # Allow assert in tests (redundant with exclude_dirs)
severity = "medium"

# ============================================================================
# VULTURE - Dead Code Detection
# ============================================================================

[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = ["tests/", "migrations/"]

# ============================================================================
# DEPTRY - Dependency Management
# ============================================================================

[tool.deptry]
extend_exclude = ["tests", "migrations", "infrastructure"]
# Dependencies used in future modules (API routes, workers) not yet implemented
ignore_unused = [
    "asyncpg",          # Used by SQLAlchemy async driver (indirect)
    "alembic",          # Used for migrations via CLI
    "anthropic",        # Used in future AI diagnostic modules
    "httpx",            # Used in future API client modules
    "aiobotocore",      # Used in future S3 media upload modules
    "python-jose",      # Used in future auth modules
    "structlog",        # Used in future logging modules
    "python-multipart", # Used by FastAPI file uploads (indirect)
    "aiofiles",         # Used in future file handling modules
]
