[project]
name = "gapsense"
version = "0.3.0"
description = "Curriculum-aligned learning diagnostics for Ghana and Uganda"
authors = [{name = "Maku Mazakpe", email = "maku@gapsense.app"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "gapsense", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.139.2"
uvicorn = {extras = ["standard"], version = "^0.34"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = "^2.10"
pydantic-settings = "^2.7"
httpx = "^0.28"
structlog = "^24.4"
python-multipart = "^0.0.32"
aiofiles = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-cov = "^6.0"
factory-boy = "^3.3"
mypy = "^1.14"
ruff = "^0.9"
pre-commit = "^4.0"
bandit = {version = "^1.8", extras = ["toml"]}
build = "^1.2"
detect-secrets = "^1.5"
pip-audit = "^2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# RUFF - Fast Python Linter/Formatter
# ============================================================================

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
extend-exclude = ["alembic/versions", "data"]  # Generated migrations and mounted evidence are checked by their own gates.

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Assertions are the executable test contract.
"src/gapsense/core/models/*.py" = [
    "TC003",  # SQLAlchemy resolves mapped annotation names when configuring models.
]

[tool.ruff.lint.isort]
known-first-party = ["gapsense"]

# ============================================================================
# MYPY - Type Checking
# ============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# PYTEST
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src/gapsense",
    "--cov-branch",
    "--cov-fail-under=100",
    "--cov-report=html:/tmp/gapsense-htmlcov",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "prompt_validation: marks tests that call live AI APIs",
]

# ============================================================================
# COVERAGE
# ============================================================================

[tool.coverage.run]
source = ["src/gapsense"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================================
# BANDIT - Security Static Analysis
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["src"]
